# MET

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
examples/: activethief_cifar10.py  activethief_mnist.py  atlasthief_cifar10.py  blackbox_mnist.py  cloudleak_cifar10.py  config.yaml  copycat_goc.py  knockoff_caltech256.py  ripper_cifar10.py
examples_paper/: activethief_cifar10.py  atlasthief_cifar10.py  blackbox_mnist.py  copycat_goc.py  knockoff_caltech256.py  ripper_cifar10.py  ripper_cifar10_WIP.py  ripper_fashionmnist.py
experiments/: attack_tests.py  gbm_ember2018.py  oimodular.py  simplenet_vs_simpnet.py
mef/: test.py
mef/attacks/: __init__.py  activethief.py  atlas.py  base.py  blackbox.py  cloudleak.py  copycat.py  knockoff.py  ripper.py
mef/datasets/vision/: caltech256.py  imagenet1000.py
mef/models/: base.py
mef/models/vision/: alexnet.py  at_cnn.py  mnet.py  resnet.py  simplenet.py  vgg.py
mef/utils/: config.py  details.py  experiment.py  ios.py  logger.py  settings.py
mef/utils/pytorch/: blocks.py  datasets.py  functional.py  training.py
mef/utils/pytorch/datasets/: __init__.py
mef/utils/pytorch/ignite/: metrics.py
mef/utils/pytorch/lighting/: module.py  trainer.py  training.py
met/attacks/: activethief.py  atlas.py  base.py  blackbox.py  copycat.py  knockoff.py  ripper.py
met/utils/: experiment.py  ios.py  logger.py
met/utils/pytorch/: blocks.py
tests/: config.yaml  test_activethief_mnist.py  test_copycat.py  test_copycat_goc.py  test_custom_dataset.py  test_training.py
(+43 files in other folders)
